--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@
         </div>
 
         <div class="rich_media_tool">
-          <a class="media_tool_meta meta_primary" href="/news/easy/playlist">イージーニュース</a>
+          <a class="media_tool_meta meta_primary" href="/news/easy/playlist">イージー・ニュース</a>
           <a class="media_tool_meta meta_primary" href="/news/web/playlist">普通のニュース</a>
         </div>
       </div>
